--- a/doc/manual/manual.tex
+++ b/doc/manual/manual.tex
@@ -249,7 +249,7 @@ The one-time string printing function should be invoked according to the prototy
 \begin{lstlisting}[tabsize=4]
 	void print_str (int <x>, int <y>, string <string>)
 \end{lstlisting}
-where <x> and <y> are the position of first character of the string on the x-axis and y-axis respectively, and <string> is the target string to be displayed. The string printing function will place the desired string on the bottom layer over the canvas for the next draw(). After a draw() is invoked, all the strings rendered and placed by the string printing function will be removed from the canvas.
+where \textless x\textgreater and \textless y\textgreater are the position of first character of the string on the x-axis and y-axis respectively, and \textless string\textgreater is the target string to be displayed. The string printing function will place the desired string on the bottom layer over the canvas for the next draw(). After a draw() is invoked, all the strings rendered and placed by the string printing function will be removed from the canvas.
 
 \subsection {load}
 To construct the graphs more efficiently, a load function is provided by Adele to import prepared ASCII art from the existing files. The prototype of the load function is
